# marketanalysis

marketingtransactions/: Makefile  README.md  pyproject.toml
marketingtransactions/docs/: mkdocs.yml
marketingtransactions/docs/docs/: index.md
marketingtransactions/transactionanalysis/: config.py  dataset.py
marketingtransactions/transactionanalysis/modeling/: predict.py  train.py
