[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transactionanalysis"
version = "0.0.1"
description = "This project involves a comprehensive analysis of an online retail transaction dataset from Kaggle."
authors = [
  { name = "kimia Ghassemzadeh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["transactionanalysis"]
force_sort_within_sections = true
